# buckclaw

./: .gitignore  README.md  push-to-github.ps1
00-chat-loop/: README.md  pyproject.toml
00-chat-loop/src/mybot/: types.py
00-chat-loop/src/mybot/cli/: chat.py  main.py
00-chat-loop/src/mybot/core/: agent.py
00-chat-loop/src/mybot/provider/llm/: base.py
01-tools/: README.md  pyproject.toml
02-skills/: README.md  pyproject.toml
03-persistence/: README.md  pyproject.toml
04-slash-commands/: README.md  pyproject.toml
04-slash-commands/default_workspace/: config.example.yaml
05-compaction/: README.md  pyproject.toml
06-web-tools/: README.md  pyproject.toml
06-web-tools/src/mybot/cli/: main.py
06-web-tools/src/mybot/provider/web_search/: __init__.py
06-web-tools/src/mybot/skills/: loader.py
07-event-driven/: IMPLEMENTATION_SUMMARY.txt  README.md  pyproject.toml
08-config-hot-reload/: README.md  pyproject.toml
08-config-hot-reload/default_workspace/: config.example.yaml
09-channels/: README.md  pyproject.toml
09-channels/default_workspace/: config.example.yaml  config.runtime.yaml
10-websocket/: README.md  pyproject.toml
11-multi-agent-routing/: README.md  pyproject.toml
12-cron-heartbeat/: README.md  pyproject.toml
14-post-message-back/: README.md  pyproject.toml
14-post-message-back/default_workspace/: AGENTS.md  BOOTSTRAP.md
14-post-message-back/default_workspace/agents/my-bot/: AGENT.md  SOUL.md
14-post-message-back/default_workspace/skills/: cron-ops.md
14-post-message-back/src/mybot/channel/: base.py
14-post-message-back/src/mybot/core/: events.py
14-post-message-back/src/mybot/server/: __init__.py  agent_worker.py
14-post-message-back/src/mybot/tools/: builtin.py
15-agent-dispatch/: README.md  STEP14_SUMMARY.txt  pyproject.toml
16-concurrency-control/: README.md  STEP13_SUMMARY.txt
17-memory/: README.md  STEP15_SUMMARY.txt
(+114 files in other folders)
