[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buckclaw-step14"
version = "0.15.0"
description = "Step 14: Post Message Back"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "BuckClaw", email = "info@buckclaw.dev"},
]
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.39.0",
  "pydantic>=2.0",
  "typer>=0.12.0",
  "rich>=13.0",
  "pyyaml>=6.0",
  "uvicorn>=0.30.0",
  "fastapi>=0.110.0",
  "httpx>=0.27.0",
  "websockets>=13.0",
  "croniter>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_ignores = true
